--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "aliasify": "^1.7.2",
         "varify": "^0.1.1",
         "browserify": "^9.0.3",
-        "uglify-js" : "^2.4.0"
+        "uglify-js" : "^2.4.0",
+        "srp-shim" :"^0.2.0"
     },
     "aliasify": {
         "aliases" : {
