--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "caf_accounts",
     "description": "Cloud Assistants accounts management",
-    "version": "0.2.8",
+    "version": "0.2.9",
     "author": "Antonio Lain <antlai@cafjs.com>",
     "dependencies": {
         "caf_core": "^0.2.0",
@@ -9,8 +9,9 @@
         "caf_cli": "^0.2.0",
         "caf_transport": "^0.2.0",
         "caf_security" : "^0.2.0",
-        "react" : "^0.13.0",
-        "react-bootstrap" : "^0.20.3",
+        "react" : "^0.14.0",
+        "react-dom" : "^0.14.0",
+        "react-bootstrap" : "^0.27.3",
         "flux": "^2.0.2",
         "keymirror": "^0.1.0",
         "eventemitter2" : "^0.4.14"
