--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "caf_accounts",
     "description": "Cloud Assistants accounts management",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "author": "Antonio Lain <antlai@cafjs.com>",
     "license": "Apache-2.0",
     "dependencies": {
@@ -18,6 +18,8 @@
         "keymirror": "^0.1.0"
     },
     "devDependencies": {
+        "minimist" : "^1.2.0",
+        "caf_srp": "^0.4.0",
         "nodeunit" : ">=0.9",
         "browserify": "^13.0.0",
         "uglify-es": "^3.3.8"
